# Nexara-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py
src/smart_applier/: main.py
src/smart_applier/agents/: job_matching_agent.py  job_scraper_agent.py  profile_agent.py  resume_builder_agent.py  resume_tailor_agent.py  skill_gap_agent.py
src/smart_applier/database/: db_setup.py
src/smart_applier/graphs/: workflow_graph.py
src/smart_applier/langgraph/: nodes.py
src/smart_applier/streamlit_app/: Home.py
src/smart_applier/streamlit_app/pages/: 1_profile_creator.py  2_job_matcher.py  3_skill_gap_analyzer.py  4_resume_builder.py  5_resume_tailor.py
src/smart_applier/utils/: db_utils.py  path_utils.py
src/ui/: __init__.py  page_1_create_profile.py  page_2_resume_builder.py  page_3_external_jd.py  page_4_job_scraper.py  page_5_skill_gap_analyzer.py  page_6_dashboard.py  page_6_db_viewer.py  page_7_langgraph_playground.py
